...
            <IconButton
              iconName={'camera-outline'}
              text={'Update Photo'}
              press={() => press('updatePhoto')}
            />
            <IconButton
              iconName={'log-out-outline'}
              text={'Log out'}
              press={() => press('logOut')}
            />
          </View>
          <View style={styles.row}>
            <IconButton
              iconName={'close-outline'}
              text={'Delete Account'}
              press={() => press('deleteAccount')}
            />
            <IconButton
              iconName={'key-outline'}
              text={'Change Password'}
...
